# motioncore-prototype

./: .gitignore  README.md  continue.md
car_door_window_controller/: continue.md  continue.v1.md  hardware_notes.md
cfl_avr/: Makefile  README.md  continue.md
cfl_avr/include/: cfl_engine.h  cfl_progmem.h  cfl_types.h
cfl_avr/runtime/: cfl_engine.c
common/spec/: four_layer_sync.md
docs/: bus-async-command-lifecycle.md  bus-controller-two-layer-architecture.md  bus-fleet-integration.md  bus-interlock-reporting.md  continue.md  defensive_baseline.md  dev-host-setup.md  i2c-client-register-map.md  interlock-framework-prior-art.md  plan-1-pi-bus-controller.md  rs485-bus-protocol-bc2-bc3.md  toolchain-wsl.md
docs/cross_repo_handoff/: dongle_class_catalog.md
docs/dongle_classes/: README.md  esp32c6_router_v1.lua  ra4m1_analytic_v1.lua  rp2350_router_v1.lua  samd21_shell_v1.lua
dongle_v1/: README.md
dongle_v1/linux/: README.md
firmware/pico/apps/00_smp_hello/: CMakeLists.txt  FreeRTOSConfig.h  main.c
fleet_design/: .dockerignore  README.md  continue.md  memory.md  mkdocs.yml
fleet_design/bench_manager/: main.lua  run.sh
fleet_design/bus_supervisor/: CONTINUE.md  README.md  main.lua  run.sh
fleet_design/docs/: architecture.md  container_runtime.md  deploy.md  index.md  operations.md  robots.md
fleet_design/fake_robot/: class_spec.lua  main.lua  run.sh
fleet_design/farm_soil/: README.md  class_spec.lua  main.lua  run.sh
fleet_design/irrigation_analytics/: .gitignore  CONTINUE.md  class_spec.lua  continue.md  main.lua  (+2 more)
linux/: dongle_registry.lua
(+604 files in other folders)
